// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a ltr article (pidgin) with most read correctly 1`] = `
.emotion-0 {
  background-color: #F6F6F6;
}

.emotion-1 {
  max-width: 63rem;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(12, 1fr);
}

@media (min-width: 63rem) {
  .emotion-1 {
    padding: 0 1rem;
    -webkit-column-gap: 1rem;
    column-gap: 1rem;
  }
}

.emotion-2 {
  grid-column: 1/span 12;
  padding-bottom: 2rem;
}

@media (min-width: 63rem) {
  .emotion-2 {
    grid-column: 1/span 8;
  }
}

.emotion-3 {
  padding-bottom: 1.5rem;
}

@media (max-width: 14.9375rem) {
  .emotion-4 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-4 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-4 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-4 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width: 80rem) {
  .emotion-4 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display: grid) {
  .emotion-4 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-4 {
      grid-template-columns: repeat(12, 1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-6 {
  color: #141414;
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  margin: 0;
  display: block;
  padding: 2rem 0;
  overflow-wrap: anywhere;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    padding: 2.5rem 0;
  }
}

.emotion-6:focus {
  outline: none;
}

@media (max-width: 14.9375rem) {
  .emotion-7 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-7 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-7 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-7 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-7 {
    margin-left: 20%;
  }
}

@media (min-width: 80rem) {
  .emotion-7 {
    margin-left: 40%;
  }
}

@supports (display: grid) {
  .emotion-7 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-7 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-7 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-7 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-7 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-7 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-7 {
      grid-template-columns: repeat(10, 1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
  }
}

.emotion-9 {
  color: #141414;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  margin: 0;
  color: #141414;
  padding-bottom: 1.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 63rem) {
  .emotion-9 {
    -webkit-padding-end: 2.5rem;
    padding-inline-end: 2.5rem;
  }
}

@media (max-width: 24.9375rem) {
  .emotion-10 {
    margin: 0 0.5rem;
    padding-bottom: 1.5rem;
  }
}

@media (min-width: 25rem) {
  @media (max-width: 62.9375rem) {
    .emotion-10 {
      margin: 0 1rem;
      padding-bottom: 2rem;
    }
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-10 {
    margin: 0 1rem;
    padding-bottom: 2.5rem;
  }
}

@media (min-width: 80rem) {
  .emotion-10 {
    margin: 0 auto;
    padding: 0 1rem 1.5rem;
    max-width: 80rem;
  }
}

.emotion-11 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
}

@media (min-width: 37.5rem) {
  .emotion-11 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-11 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-11 {
    margin-bottom: 1rem;
  }
}

.emotion-13 {
  margin: 0;
  padding: 0;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-17 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-19 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #F6F6F6;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-19 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-19 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-19 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-19 {
    padding-right: 1rem;
  }
}

.emotion-21 {
  list-style-type: none;
  margin: 0;
  padding: 0;
  grid-auto-flow: column;
  grid-template-rows: repeat(10, auto);
}

@supports (display: grid) {
  .emotion-21 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-21 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-21 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-21 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-21 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-21 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-21 {
      grid-template-columns: repeat(20, 1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-21 {
    grid-auto-flow: row;
  }
}

@media (min-width: 37.5rem) {
  .emotion-21 {
    grid-template-rows: repeat(5, auto);
  }
}

.emotion-23 {
  position: relative;
  padding-bottom: 1.5rem;
}

@media (max-width: 14.9375rem) {
  .emotion-23 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-23 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-23 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-23 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-23 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 80rem) {
  .emotion-23 {
    width: calc(20%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display: grid) {
  .emotion-23 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-23 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-23 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-23 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-23 {
      grid-template-columns: repeat(3, 1fr);
      grid-column-end: span 3;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-23 {
      grid-template-columns: repeat(4, 1fr);
      grid-column-end: span 4;
    }
  }

  @media (min-width: 80rem) {
    .emotion-23 {
      grid-template-columns: repeat(4, 1fr);
      grid-column-end: span 4;
    }
  }
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

@media (max-width: 14.9375rem) {
  .emotion-26 {
    min-width: 2.5rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-26 {
    min-width: 2.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-26 {
    min-width: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-26 {
    min-width: 4rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-26 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-26 {
      min-width: 2rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-26 {
    min-width: 2rem;
  }
}

.emotion-27 {
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  position: relative;
  color: #B80000;
  margin: 0;
  padding: 0;
  font-size: 2rem;
  line-height: 2.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-27 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-27 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

.emotion-28 {
  padding-top: 0.375rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-28 {
    padding-right: 0;
  }
}

.emotion-29 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-29 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-29 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-29:hover,
.emotion-29:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-29:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

@media (min-width: 25rem) {
  .emotion-29 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }

  @media (min-width: 20rem) and (max-width: 37.4375rem) {
    .emotion-29 {
      font-size: 1.125rem;
      line-height: 1.375rem;
    }
  }

  @media (min-width: 37.5rem) {
    .emotion-29 {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }
  }
}

.emotion-30 {
  padding-top: 0.5rem;
}

.emotion-31 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #545658;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-31 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-31 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-36 {
    min-width: 2.5rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-36 {
    min-width: 2.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-36 {
    min-width: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-36 {
    min-width: 4rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-36 {
    min-width: 4rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-36 {
      min-width: 2rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-36 {
    min-width: 2rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-66 {
    min-width: 2.5rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-66 {
    min-width: 2.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-66 {
    min-width: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-66 {
    min-width: 4rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-66 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-66 {
      min-width: 2rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-66 {
    min-width: 4rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-76 {
    min-width: 2.5rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-76 {
    min-width: 2.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-76 {
    min-width: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-76 {
    min-width: 4rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-76 {
    min-width: 4rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-76 {
      min-width: 4rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-76 {
    min-width: 2rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-86 {
    min-width: 2.5rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-86 {
    min-width: 2.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-86 {
    min-width: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-86 {
    min-width: 4rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-86 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-86 {
      min-width: 4rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-86 {
    min-width: 2rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-116 {
    min-width: 2.5rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-116 {
    min-width: 2.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-116 {
    min-width: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-116 {
    min-width: 4rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-116 {
    min-width: 4rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-116 {
      min-width: 4rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-116 {
    min-width: 4rem;
  }
}

<div>
  <div
    class="emotion-0"
  >
    <noscript />
    <div>
      chartbeat
    </div>
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <main
          class="emotion-3"
          role="main"
        >
          <div
            class="emotion-4 emotion-5"
            dir="ltr"
          >
            <h1
              class="emotion-6"
              id="content"
              tabindex="-1"
            >
              Article Headline in Pidgin
            </h1>
          </div>
          <div
            class="emotion-7 emotion-5"
            dir="ltr"
          >
            <p
              class="emotion-9"
              dir="ltr"
            >
              A paragraph in Pidgin.
            </p>
          </div>
        </main>
      </div>
    </div>
    <section
      aria-labelledby="Most-Read"
      class="emotion-10"
      data-e2e="most-read"
      data-testid="most-read"
      role="region"
    >
      <div
        class="emotion-11 emotion-12"
      >
        <h2
          class="emotion-13 emotion-14"
        >
          <span
            class="emotion-15 emotion-16"
          >
            <span
              class="emotion-17 emotion-18"
            >
              <span
                class="emotion-19 emotion-20"
                dir="ltr"
                id="Most-Read"
              >
                De one we dem de read well well
              </span>
            </span>
          </span>
        </h2>
      </div>
      <ol
        class="emotion-21 emotion-5"
        dir="ltr"
        role="list"
      >
        <li
          class="emotion-23 emotion-5"
          dir="ltr"
          role="listitem"
        >
          <div
            class="emotion-25"
          >
            <div
              class="emotion-26"
              dir="ltr"
            >
              <span
                class="emotion-27"
              >
                1
              </span>
            </div>
            <div
              class="emotion-28"
              dir="ltr"
            >
              <a
                class="focusIndicatorDisplayTableCell emotion-29"
                href="https://www.bbc.com/pidgin/articles/cz5kkgv41v0o"
              >
                Teams wey qualify for Afcon 2023 and how things stand for each group
              </a>
              <div
                class="emotion-30"
              >
                <time
                  class="emotion-31 emotion-32"
                  datetime="2023-06-19"
                >
                  De one we dem update for: 19th June 2023
                </time>
              </div>
            </div>
          </div>
        </li>
        <li
          class="emotion-23 emotion-5"
          dir="ltr"
          role="listitem"
        >
          <div
            class="emotion-25"
          >
            <div
              class="emotion-36"
              dir="ltr"
            >
              <span
                class="emotion-27"
              >
                2
              </span>
            </div>
            <div
              class="emotion-28"
              dir="ltr"
            >
              <a
                class="focusIndicatorDisplayTableCell emotion-29"
                href="https://www.bbc.com/pidgin/articles/czd44wvly0qo"
              >
                'We dey hear gospel songs den screaming' - Woman tok of Uganda school attack 
              </a>
              <div
                class="emotion-30"
              >
                <time
                  class="emotion-31 emotion-32"
                  datetime="2023-06-19"
                >
                  De one we dem update for: 19th June 2023
                </time>
              </div>
            </div>
          </div>
        </li>
        <li
          class="emotion-23 emotion-5"
          dir="ltr"
          role="listitem"
        >
          <div
            class="emotion-25"
          >
            <div
              class="emotion-26"
              dir="ltr"
            >
              <span
                class="emotion-27"
              >
                3
              </span>
            </div>
            <div
              class="emotion-28"
              dir="ltr"
            >
              <a
                class="focusIndicatorDisplayTableCell emotion-29"
                href="https://www.bbc.com/pidgin/articles/cgr6g81j2g8o"
              >
                Super Eagles qualify for Nations Cup afta beating Sierra Leone for Monrovia
              </a>
              <div
                class="emotion-30"
              >
                <time
                  class="emotion-31 emotion-32"
                  datetime="2023-06-18"
                >
                  De one we dem update for: 18th June 2023
                </time>
              </div>
            </div>
          </div>
        </li>
        <li
          class="emotion-23 emotion-5"
          dir="ltr"
          role="listitem"
        >
          <div
            class="emotion-25"
          >
            <div
              class="emotion-36"
              dir="ltr"
            >
              <span
                class="emotion-27"
              >
                4
              </span>
            </div>
            <div
              class="emotion-28"
              dir="ltr"
            >
              <a
                class="focusIndicatorDisplayTableCell emotion-29"
                href="https://www.bbc.com/pidgin/articles/cx047w4gxqzo"
              >
                Forbes top ten list of highest paid athletes for 2023 and wetin dem earn
              </a>
              <div
                class="emotion-30"
              >
                <time
                  class="emotion-31 emotion-32"
                  datetime="2023-05-03"
                >
                  De one we dem update for: 3rd May 2023
                </time>
              </div>
            </div>
          </div>
        </li>
        <li
          class="emotion-23 emotion-5"
          dir="ltr"
          role="listitem"
        >
          <div
            class="emotion-25"
          >
            <div
              class="emotion-66"
              dir="ltr"
            >
              <span
                class="emotion-27"
              >
                5
              </span>
            </div>
            <div
              class="emotion-28"
              dir="ltr"
            >
              <a
                class="focusIndicatorDisplayTableCell emotion-29"
                href="/pidgin/65817572"
              >
                Tins to sabi about 2023 Sierra Leone general election
              </a>
              <div
                class="emotion-30"
              >
                <time
                  class="emotion-31 emotion-32"
                  datetime="2023-06-18"
                >
                  De one we dem update for: 18th June 2023
                </time>
              </div>
            </div>
          </div>
        </li>
        <li
          class="emotion-23 emotion-5"
          dir="ltr"
          role="listitem"
        >
          <div
            class="emotion-25"
          >
            <div
              class="emotion-76"
              dir="ltr"
            >
              <span
                class="emotion-27"
              >
                6
              </span>
            </div>
            <div
              class="emotion-28"
              dir="ltr"
            >
              <a
                class="focusIndicatorDisplayTableCell emotion-29"
                href="https://www.bbc.com/pidgin/articles/cv21n0qzvv6o"
              >
                CBN move to allow naira trade more freely against di dollar - Wetin e mean? 
              </a>
              <div
                class="emotion-30"
              >
                <time
                  class="emotion-31 emotion-32"
                  datetime="2023-06-15"
                >
                  De one we dem update for: 15th June 2023
                </time>
              </div>
            </div>
          </div>
        </li>
        <li
          class="emotion-23 emotion-5"
          dir="ltr"
          role="listitem"
        >
          <div
            class="emotion-25"
          >
            <div
              class="emotion-86"
              dir="ltr"
            >
              <span
                class="emotion-27"
              >
                7
              </span>
            </div>
            <div
              class="emotion-28"
              dir="ltr"
            >
              <a
                class="focusIndicatorDisplayTableCell emotion-29"
                href="https://www.bbc.com/pidgin/articles/cd1k74e9pl1o"
              >
                'We go flush out bad eggs for passport offices' - Acting Comptroller General Immigration 
              </a>
              <div
                class="emotion-30"
              >
                <time
                  class="emotion-31 emotion-32"
                  datetime="2023-06-18"
                >
                  De one we dem update for: 18th June 2023
                </time>
              </div>
            </div>
          </div>
        </li>
        <li
          class="emotion-23 emotion-5"
          dir="ltr"
          role="listitem"
        >
          <div
            class="emotion-25"
          >
            <div
              class="emotion-76"
              dir="ltr"
            >
              <span
                class="emotion-27"
              >
                8
              </span>
            </div>
            <div
              class="emotion-28"
              dir="ltr"
            >
              <a
                class="focusIndicatorDisplayTableCell emotion-29"
                href="https://www.bbc.com/pidgin/articles/cnd9g0p5p2lo"
              >
                South Africa taps don dry finish on top electricity kasala
              </a>
              <div
                class="emotion-30"
              >
                <time
                  class="emotion-31 emotion-32"
                  datetime="2023-06-19"
                >
                  De one we dem update for: 19th June 2023
                </time>
              </div>
            </div>
          </div>
        </li>
        <li
          class="emotion-23 emotion-5"
          dir="ltr"
          role="listitem"
        >
          <div
            class="emotion-25"
          >
            <div
              class="emotion-86"
              dir="ltr"
            >
              <span
                class="emotion-27"
              >
                9
              </span>
            </div>
            <div
              class="emotion-28"
              dir="ltr"
            >
              <a
                class="focusIndicatorDisplayTableCell emotion-29"
                href="/pidgin/tori-65926540"
              >
                Sharp-sharp facts about President Bola Tinubu special advisers
              </a>
              <div
                class="emotion-30"
              >
                <time
                  class="emotion-31 emotion-32"
                  datetime="2023-06-16"
                >
                  De one we dem update for: 16th June 2023
                </time>
              </div>
            </div>
          </div>
        </li>
        <li
          class="emotion-23 emotion-5"
          dir="ltr"
          role="listitem"
        >
          <div
            class="emotion-25"
          >
            <div
              class="emotion-116"
              dir="ltr"
            >
              <span
                class="emotion-27"
              >
                10
              </span>
            </div>
            <div
              class="emotion-28"
              dir="ltr"
            >
              <a
                class="focusIndicatorDisplayTableCell emotion-29"
                href="https://www.bbc.com/pidgin/articles/c0d81l304xdo"
              >
                Easter date, Workers day, Salah date plus oda public holidays for 2023
              </a>
              <div
                class="emotion-30"
              >
                <time
                  class="emotion-31 emotion-32"
                  datetime="2022-12-31"
                >
                  De one we dem update for: 31st December 2022
                </time>
              </div>
            </div>
          </div>
        </li>
      </ol>
    </section>
  </div>
</div>
`;

exports[`should render a news article correctly 1`] = `
.emotion-0 {
  background-color: #F6F6F6;
}

.emotion-1 {
  max-width: 63rem;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(12, 1fr);
}

@media (min-width: 63rem) {
  .emotion-1 {
    padding: 0 1rem;
    -webkit-column-gap: 1rem;
    column-gap: 1rem;
  }
}

.emotion-2 {
  grid-column: 1/span 12;
  padding-bottom: 2rem;
}

@media (min-width: 63rem) {
  .emotion-2 {
    grid-column: 1/span 8;
  }
}

.emotion-3 {
  padding-bottom: 1.5rem;
}

@media (max-width: 14.9375rem) {
  .emotion-4 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-4 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-4 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-4 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width: 80rem) {
  .emotion-4 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display: grid) {
  .emotion-4 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-4 {
      grid-template-columns: repeat(12, 1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-6 {
  color: #141414;
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 500;
  margin: 0;
  display: block;
  padding: 2rem 0;
  overflow-wrap: anywhere;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    padding: 2.5rem 0;
  }
}

.emotion-6:focus {
  outline: none;
}

@media (max-width: 14.9375rem) {
  .emotion-7 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-7 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-7 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-7 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-7 {
    margin-left: 20%;
  }
}

@media (min-width: 80rem) {
  .emotion-7 {
    margin-left: 40%;
  }
}

@supports (display: grid) {
  .emotion-7 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-7 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-7 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-7 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-7 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-7 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-7 {
      grid-template-columns: repeat(10, 1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
  }
}

.emotion-9 {
  color: #141414;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  margin: 0;
  color: #141414;
  padding-bottom: 1.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 63rem) {
  .emotion-9 {
    -webkit-padding-end: 2.5rem;
    padding-inline-end: 2.5rem;
  }
}

.emotion-10 {
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-bottom: 1.5rem;
}

@media (min-width: 25rem) {
  .emotion-10 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-10 {
    padding-left: 0;
    padding-right: 0;
  }
}

<div>
  <div
    class="emotion-0"
  >
    <noscript />
    <div>
      chartbeat
    </div>
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <main
          class="emotion-3"
          role="main"
        >
          <div
            class="emotion-4 emotion-5"
            dir="ltr"
          >
            <h1
              class="emotion-6"
              id="content"
              tabindex="-1"
            >
              Article Headline
            </h1>
          </div>
          <div
            class="emotion-7 emotion-5"
            dir="ltr"
          >
            <p
              class="emotion-9"
              dir="ltr"
            >
              A paragraph.
            </p>
          </div>
          <div
            class="emotion-10"
          >
            <div
              class="riddle2-wrapper"
              data-auto-scroll="true"
              data-bg="#fff"
              data-fg="#00205b"
              data-is-fixed-height-enabled="false"
              data-rid-id="SAVstNdh"
              style="margin:0 auto; max-width:100%; width:640px;"
            >
              <script
                src="https://www.riddle.com/embed/build-embedjs/embedV2.js"
              />
              <iframe
                allow="autoplay"
                referrerpolicy="strict-origin"
                src="https://www.riddle.com/embed/a/SAVstNdh?lazyImages=true&staticHeight=false"
              >
                &lt;section data-block="SingleChoice"&gt;&lt;h2&gt;How silly is Abby?&lt;/h2&gt;&lt;p&gt;&lt;p&gt;Babby&lt;/p&gt;&lt;/p&gt;&lt;ul&gt;&lt;li&gt;Extremely silly&lt;/li&gt;&lt;li&gt;Not silly at all&lt;/li&gt;&lt;li&gt;Not very silly&lt;/li&gt;&lt;li&gt;Very silly&lt;/li&gt;&lt;/ul&gt;&lt;/section&gt;&lt;section data-block="SingleChoice"&gt;&lt;h3&gt;What is Abby&#039;s silliness level?&lt;/h3&gt;&lt;ul&gt;&lt;li&gt;High&lt;/li&gt;&lt;li&gt;Low&lt;/li&gt;&lt;li&gt;Medium&lt;/li&gt;&lt;li&gt;None&lt;/li&gt;&lt;/ul&gt;&lt;/section&gt;&lt;section data-block="SingleChoice"&gt;&lt;h3&gt;How often is Abby silly?&lt;/h3&gt;&lt;ul&gt;&lt;li&gt;Never&lt;/li&gt;&lt;li&gt;Rarely&lt;/li&gt;&lt;li&gt;Always&lt;/li&gt;&lt;li&gt;Sometimes&lt;/li&gt;&lt;/ul&gt;&lt;/section&gt;&lt;section data-block="SingleChoice"&gt;&lt;h3&gt;What is Abby&#039;s silliness like?&lt;/h3&gt;&lt;ul&gt;&lt;li&gt;Outrageous&lt;/li&gt;&lt;li&gt;Non-existent&lt;/li&gt;&lt;li&gt;Mild&lt;/li&gt;&lt;li&gt;Moderate&lt;/li&gt;&lt;/ul&gt;&lt;/section&gt;&lt;section data-block="SingleChoice"&gt;&lt;h3&gt;How would you describe Abby&#039;s silliness?&lt;/h3&gt;&lt;ul&gt;&lt;li&gt;Crazy&lt;/li&gt;&lt;li&gt;Calm&lt;/li&gt;&lt;li&gt;Boring&lt;/li&gt;&lt;li&gt;Sensible&lt;/li&gt;&lt;/ul&gt;&lt;/section&gt;
              </iframe>
            </div>
          </div>
        </main>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render a news article with headline in the middle correctly 1`] = `
.emotion-0 {
  background-color: #F6F6F6;
}

.emotion-1 {
  max-width: 63rem;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(12, 1fr);
}

@media (min-width: 63rem) {
  .emotion-1 {
    padding: 0 1rem;
    -webkit-column-gap: 1rem;
    column-gap: 1rem;
  }
}

.emotion-2 {
  grid-column: 1/span 12;
  padding-bottom: 2rem;
}

@media (min-width: 63rem) {
  .emotion-2 {
    grid-column: 1/span 8;
  }
}

.emotion-3 {
  padding-bottom: 1.5rem;
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

@media (max-width: 14.9375rem) {
  .emotion-5 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-5 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-5 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-5 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-5 {
    margin-left: 20%;
  }
}

@media (min-width: 80rem) {
  .emotion-5 {
    margin-left: 40%;
  }
}

@supports (display: grid) {
  .emotion-5 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-5 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-5 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-5 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-5 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-5 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-5 {
      grid-template-columns: repeat(10, 1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
  }
}

.emotion-7 {
  color: #141414;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  margin: 0;
  color: #141414;
  padding-bottom: 1.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-7 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 63rem) {
  .emotion-7 {
    -webkit-padding-end: 2.5rem;
    padding-inline-end: 2.5rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-8 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-8 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-8 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-8 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width: 80rem) {
  .emotion-8 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display: grid) {
  .emotion-8 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-8 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-8 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-8 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-8 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-8 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-8 {
      grid-template-columns: repeat(12, 1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-10 {
  color: #141414;
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 500;
  margin: 0;
  display: block;
  padding: 2rem 0;
  overflow-wrap: anywhere;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-10 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    padding: 2.5rem 0;
  }
}

.emotion-10:focus {
  outline: none;
}

<div>
  <div
    class="emotion-0"
  >
    <noscript />
    <div>
      chartbeat
    </div>
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <main
          class="emotion-3"
          role="main"
        >
          <h1
            class="emotion-4"
            id="content"
            tabindex="-1"
          >
            SEO Headline
          </h1>
          <div
            class="emotion-5 emotion-6"
            dir="ltr"
          >
            <p
              class="emotion-7"
              dir="ltr"
            >
              Paragraph above headline
            </p>
          </div>
          <div
            class="emotion-8 emotion-6"
            dir="ltr"
          >
            <strong
              class="emotion-10"
            >
              Article Headline
            </strong>
          </div>
          <div
            class="emotion-5 emotion-6"
            dir="ltr"
          >
            <p
              class="emotion-7"
              dir="ltr"
            >
              Paragraph below headline
            </p>
          </div>
        </main>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render a news article without headline correctly 1`] = `
.emotion-0 {
  background-color: #F6F6F6;
}

.emotion-1 {
  max-width: 63rem;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(12, 1fr);
}

@media (min-width: 63rem) {
  .emotion-1 {
    padding: 0 1rem;
    -webkit-column-gap: 1rem;
    column-gap: 1rem;
  }
}

.emotion-2 {
  grid-column: 1/span 12;
  padding-bottom: 2rem;
}

@media (min-width: 63rem) {
  .emotion-2 {
    grid-column: 1/span 8;
  }
}

.emotion-3 {
  padding-bottom: 1.5rem;
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

@media (max-width: 14.9375rem) {
  .emotion-5 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-5 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-5 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-5 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-5 {
    margin-left: 20%;
  }
}

@media (min-width: 80rem) {
  .emotion-5 {
    margin-left: 40%;
  }
}

@supports (display: grid) {
  .emotion-5 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-5 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-5 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-5 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-5 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-5 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-5 {
      grid-template-columns: repeat(10, 1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
  }
}

.emotion-7 {
  color: #141414;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  margin: 0;
  color: #141414;
  padding-bottom: 1.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-7 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 63rem) {
  .emotion-7 {
    -webkit-padding-end: 2.5rem;
    padding-inline-end: 2.5rem;
  }
}

<div>
  <div
    class="emotion-0"
  >
    <noscript />
    <div>
      chartbeat
    </div>
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <main
          class="emotion-3"
          role="main"
        >
          <h1
            class="emotion-4"
            id="content"
            tabindex="-1"
          >
            Article Headline
          </h1>
          <div
            class="emotion-5 emotion-6"
            dir="ltr"
          >
            <p
              class="emotion-7"
              dir="ltr"
            >
              Paragraph 1
            </p>
          </div>
        </main>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render a rtl article (persian) with most read correctly 1`] = `
.emotion-0 {
  background-color: #F6F6F6;
}

.emotion-1 {
  max-width: 63rem;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(12, 1fr);
}

@media (min-width: 63rem) {
  .emotion-1 {
    padding: 0 1rem;
    -webkit-column-gap: 1rem;
    column-gap: 1rem;
  }
}

.emotion-2 {
  grid-column: 1/span 12;
  padding-bottom: 2rem;
}

@media (min-width: 63rem) {
  .emotion-2 {
    grid-column: 1/span 8;
  }
}

.emotion-3 {
  padding-bottom: 1.5rem;
}

@media (max-width: 14.9375rem) {
  .emotion-4 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-4 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-4 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-4 {
    margin-right: 16.666666666666668%;
  }
}

@media (min-width: 80rem) {
  .emotion-4 {
    margin-right: 33.333333333333336%;
  }
}

@supports (display: grid) {
  .emotion-4 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-4 {
      grid-template-columns: repeat(12, 1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-6 {
  color: #141414;
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-style: normal;
  font-weight: 700;
  margin: 0;
  display: block;
  padding: 2rem 0;
  overflow-wrap: anywhere;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 2.5rem;
    line-height: 3.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    padding: 2.5rem 0;
  }
}

.emotion-6:focus {
  outline: none;
}

@media (max-width: 14.9375rem) {
  .emotion-7 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-7 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-7 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-7 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-7 {
    margin-right: 20%;
  }
}

@media (min-width: 80rem) {
  .emotion-7 {
    margin-right: 40%;
  }
}

@supports (display: grid) {
  .emotion-7 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-7 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-7 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-7 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-7 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-7 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-7 {
      grid-template-columns: repeat(10, 1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
  }
}

.emotion-9 {
  color: #141414;
  font-size: 0.9375rem;
  line-height: 1.5rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-style: normal;
  font-weight: 400;
  margin: 0;
  color: #141414;
  padding-bottom: 1.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 63rem) {
  .emotion-9 {
    -webkit-padding-end: 2.5rem;
    padding-inline-end: 2.5rem;
  }
}

@media (max-width: 24.9375rem) {
  .emotion-10 {
    margin: 0 0.5rem;
    padding-bottom: 1.5rem;
  }
}

@media (min-width: 25rem) {
  @media (max-width: 62.9375rem) {
    .emotion-10 {
      margin: 0 1rem;
      padding-bottom: 2rem;
    }
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-10 {
    margin: 0 1rem;
    padding-bottom: 2.5rem;
  }
}

@media (min-width: 80rem) {
  .emotion-10 {
    margin: 0 auto;
    padding: 0 1rem 1.5rem;
    max-width: 80rem;
  }
}

.emotion-11 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
}

@media (min-width: 37.5rem) {
  .emotion-11 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-11 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-11 {
    margin-bottom: 1rem;
  }
}

.emotion-13 {
  margin: 0;
  padding: 0;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-17 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-19 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #F6F6F6;
  margin: 1rem 0;
  padding-left: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-19 {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-19 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-19 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-19 {
    padding-left: 1rem;
  }
}

.emotion-21 {
  list-style-type: none;
  margin: 0;
  padding: 0;
  grid-auto-flow: column;
  grid-template-rows: repeat(10, auto);
}

@supports (display: grid) {
  .emotion-21 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-21 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-21 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-21 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-21 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-21 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-21 {
      grid-template-columns: repeat(20, 1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-21 {
    grid-auto-flow: row;
  }
}

@media (min-width: 37.5rem) {
  .emotion-21 {
    grid-template-rows: repeat(5, auto);
  }
}

.emotion-23 {
  position: relative;
  padding-bottom: 1.5rem;
}

@media (max-width: 14.9375rem) {
  .emotion-23 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-23 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-23 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-23 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-23 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 80rem) {
  .emotion-23 {
    width: calc(20%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display: grid) {
  .emotion-23 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-23 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-23 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-23 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-23 {
      grid-template-columns: repeat(3, 1fr);
      grid-column-end: span 3;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-23 {
      grid-template-columns: repeat(4, 1fr);
      grid-column-end: span 4;
    }
  }

  @media (min-width: 80rem) {
    .emotion-23 {
      grid-template-columns: repeat(4, 1fr);
      grid-column-end: span 4;
    }
  }
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

@media (max-width: 14.9375rem) {
  .emotion-26 {
    min-width: 1rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-26 {
    min-width: 1.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-26 {
    min-width: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-26 {
    min-width: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-26 {
    min-width: 1.5rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-26 {
      min-width: 1.5rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-26 {
    min-width: 1.5rem;
  }
}

.emotion-27 {
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-style: normal;
  font-weight: 400;
  position: relative;
  color: #B80000;
  margin: 0;
  padding: 0;
  font-size: 2rem;
  line-height: 2.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-27 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-27 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

.emotion-28 {
  padding-top: 0.375rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-28 {
    padding-left: 0;
  }
}

.emotion-29 {
  font-size: 0.9375rem;
  line-height: 1.5rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-style: normal;
  font-weight: 700;
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-29 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-29 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

.emotion-29:hover,
.emotion-29:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-29:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

@media (min-width: 25rem) {
  .emotion-29 {
    font-size: 1.125rem;
    line-height: 1.625rem;
  }

  @media (min-width: 20rem) and (max-width: 37.4375rem) {
    .emotion-29 {
      font-size: 1.125rem;
      line-height: 1.625rem;
    }
  }

  @media (min-width: 37.5rem) {
    .emotion-29 {
      font-size: 1.25rem;
      line-height: 1.75rem;
    }
  }
}

.emotion-30 {
  padding-top: 0.5rem;
}

.emotion-31 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: #545658;
  display: block;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-31 {
    font-size: 0.875rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-31 {
    font-size: 0.8125rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-36 {
    min-width: 1rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-36 {
    min-width: 1.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-36 {
    min-width: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-36 {
    min-width: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-36 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-36 {
      min-width: 1.5rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-36 {
    min-width: 1.5rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-66 {
    min-width: 1rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-66 {
    min-width: 1.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-66 {
    min-width: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-66 {
    min-width: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-66 {
    min-width: 1.5rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-66 {
      min-width: 1.5rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-66 {
    min-width: 2rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-76 {
    min-width: 1rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-76 {
    min-width: 1.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-76 {
    min-width: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-76 {
    min-width: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-76 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-76 {
      min-width: 2rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-76 {
    min-width: 1.5rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-86 {
    min-width: 1rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-86 {
    min-width: 1.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-86 {
    min-width: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-86 {
    min-width: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-86 {
    min-width: 1.5rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-86 {
      min-width: 2rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-86 {
    min-width: 1.5rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-116 {
    min-width: 1rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-116 {
    min-width: 1.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-116 {
    min-width: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-116 {
    min-width: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-116 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-116 {
      min-width: 2rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-116 {
    min-width: 2rem;
  }
}

<div>
  <div
    class="emotion-0"
  >
    <noscript />
    <div>
      chartbeat
    </div>
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <main
          class="emotion-3"
          role="main"
        >
          <div
            class="emotion-4 emotion-5"
            dir="rtl"
          >
            <h1
              class="emotion-6"
              id="content"
              tabindex="-1"
            >
              سرصفحه مقاله
            </h1>
          </div>
          <div
            class="emotion-7 emotion-5"
            dir="rtl"
          >
            <p
              class="emotion-9"
              dir="rtl"
            >
              یک پاراگراف.
            </p>
          </div>
        </main>
      </div>
    </div>
    <section
      aria-labelledby="Most-Read"
      class="emotion-10"
      data-e2e="most-read"
      data-testid="most-read"
      role="region"
    >
      <div
        class="emotion-11 emotion-12"
      >
        <h2
          class="emotion-13 emotion-14"
        >
          <span
            class="emotion-15 emotion-16"
          >
            <span
              class="emotion-17 emotion-18"
            >
              <span
                class="emotion-19 emotion-20"
                dir="rtl"
                id="Most-Read"
              >
                پربیننده‌ترین‌ها
              </span>
            </span>
          </span>
        </h2>
      </div>
      <ol
        class="emotion-21 emotion-5"
        dir="rtl"
        role="list"
      >
        <li
          class="emotion-23 emotion-5"
          dir="rtl"
          role="listitem"
        >
          <div
            class="emotion-25"
          >
            <div
              class="emotion-26"
              dir="rtl"
            >
              <span
                class="emotion-27"
              >
                ۱
              </span>
            </div>
            <div
              class="emotion-28"
              dir="rtl"
            >
              <a
                class="focusIndicatorDisplayTableCell emotion-29"
                href="https://www.bbc.com/persian/articles/c4n9j7rx27lo"
              >
                ایران در آستانه بحران بنزین؛ تابستانی دشوار برای دولت رئیسی در پیش است
              </a>
              <div
                class="emotion-30"
              >
                <time
                  class="emotion-31 emotion-32"
                  datetime="2023-06-19"
                >
                  به روز شده در ۱۹ ژوئن ۲۰۲۳
                </time>
              </div>
            </div>
          </div>
        </li>
        <li
          class="emotion-23 emotion-5"
          dir="rtl"
          role="listitem"
        >
          <div
            class="emotion-25"
          >
            <div
              class="emotion-36"
              dir="rtl"
            >
              <span
                class="emotion-27"
              >
                ۲
              </span>
            </div>
            <div
              class="emotion-28"
              dir="rtl"
            >
              <a
                class="focusIndicatorDisplayTableCell emotion-29"
                href="https://www.bbc.com/persian/articles/cm58lxneyrvo"
              >
                پرونده حمید نوری؛ وکلای مدافع: نوری فریب خورد
              </a>
              <div
                class="emotion-30"
              >
                <time
                  class="emotion-31 emotion-32"
                  datetime="2023-06-19"
                >
                  به روز شده در ۱۹ ژوئن ۲۰۲۳
                </time>
              </div>
            </div>
          </div>
        </li>
        <li
          class="emotion-23 emotion-5"
          dir="rtl"
          role="listitem"
        >
          <div
            class="emotion-25"
          >
            <div
              class="emotion-26"
              dir="rtl"
            >
              <span
                class="emotion-27"
              >
                ۳
              </span>
            </div>
            <div
              class="emotion-28"
              dir="rtl"
            >
              <a
                class="focusIndicatorDisplayTableCell emotion-29"
                href="https://www.bbc.com/persian/articles/cx7e0eexdeeo"
              >
                اما رادوکانو: گاهی آرزو می‌کنم که ای کاش قهرمان اوپن آمریکا نمی‌شدم
              </a>
              <div
                class="emotion-30"
              >
                <time
                  class="emotion-31 emotion-32"
                  datetime="2023-06-19"
                >
                  به روز شده در ۱۹ ژوئن ۲۰۲۳
                </time>
              </div>
            </div>
          </div>
        </li>
        <li
          class="emotion-23 emotion-5"
          dir="rtl"
          role="listitem"
        >
          <div
            class="emotion-25"
          >
            <div
              class="emotion-36"
              dir="rtl"
            >
              <span
                class="emotion-27"
              >
                ۴
              </span>
            </div>
            <div
              class="emotion-28"
              dir="rtl"
            >
              <a
                class="focusIndicatorDisplayTableCell emotion-29"
                href="https://www.bbc.com/persian/articles/cqe0045zrpdo"
              >
                ملی‌پوش سابق هلند برای چاقو زدن به فامیلش به ۱۸ ماه حبس محکوم شد
              </a>
              <div
                class="emotion-30"
              >
                <time
                  class="emotion-31 emotion-32"
                  datetime="2023-06-19"
                >
                  به روز شده در ۱۹ ژوئن ۲۰۲۳
                </time>
              </div>
            </div>
          </div>
        </li>
        <li
          class="emotion-23 emotion-5"
          dir="rtl"
          role="listitem"
        >
          <div
            class="emotion-25"
          >
            <div
              class="emotion-66"
              dir="rtl"
            >
              <span
                class="emotion-27"
              >
                ۵
              </span>
            </div>
            <div
              class="emotion-28"
              dir="rtl"
            >
              <a
                class="focusIndicatorDisplayTableCell emotion-29"
                href="https://www.bbc.com/persian/articles/cjmyylvr1nvo"
              >
                وزیر خارجه آمریکا در پکن؛ شی: پیشرفت‌هایی در روابط حاصل شده است، بلینکن: رقابت نباید بدل به دشمنی شود
              </a>
              <div
                class="emotion-30"
              >
                <time
                  class="emotion-31 emotion-32"
                  datetime="2023-06-19"
                >
                  به روز شده در ۱۹ ژوئن ۲۰۲۳
                </time>
              </div>
            </div>
          </div>
        </li>
        <li
          class="emotion-23 emotion-5"
          dir="rtl"
          role="listitem"
        >
          <div
            class="emotion-25"
          >
            <div
              class="emotion-76"
              dir="rtl"
            >
              <span
                class="emotion-27"
              >
                ۶
              </span>
            </div>
            <div
              class="emotion-28"
              dir="rtl"
            >
              <a
                class="focusIndicatorDisplayTableCell emotion-29"
                href="https://www.bbc.com/persian/articles/cyxgqq1796qo"
              >
                سگم سرطان پستان مرا تشخیص داد
              </a>
              <div
                class="emotion-30"
              >
                <time
                  class="emotion-31 emotion-32"
                  datetime="2023-06-18"
                >
                  به روز شده در ۱۸ ژوئن ۲۰۲۳
                </time>
              </div>
            </div>
          </div>
        </li>
        <li
          class="emotion-23 emotion-5"
          dir="rtl"
          role="listitem"
        >
          <div
            class="emotion-25"
          >
            <div
              class="emotion-86"
              dir="rtl"
            >
              <span
                class="emotion-27"
              >
                ۷
              </span>
            </div>
            <div
              class="emotion-28"
              dir="rtl"
            >
              <a
                class="focusIndicatorDisplayTableCell emotion-29"
                href="https://www.bbc.com/persian/articles/cydg800g89yo"
              >
                لوح ۲۸۰۰ ساله از ایتالیا به عراق بازگردانده شد
              </a>
              <div
                class="emotion-30"
              >
                <time
                  class="emotion-31 emotion-32"
                  datetime="2023-06-18"
                >
                  به روز شده در ۱۸ ژوئن ۲۰۲۳
                </time>
              </div>
            </div>
          </div>
        </li>
        <li
          class="emotion-23 emotion-5"
          dir="rtl"
          role="listitem"
        >
          <div
            class="emotion-25"
          >
            <div
              class="emotion-76"
              dir="rtl"
            >
              <span
                class="emotion-27"
              >
                ۸
              </span>
            </div>
            <div
              class="emotion-28"
              dir="rtl"
            >
              <a
                class="focusIndicatorDisplayTableCell emotion-29"
                href="https://www.bbc.com/persian/articles/cgr664ezld5o"
              >
                نمایندگان کشورها و نهادها در اجلاس سازمان ملل خواستار پایان یافتن سیاست‌های تبعیض‌آمیز طالبان علیه زنان شدند
              </a>
              <div
                class="emotion-30"
              >
                <time
                  class="emotion-31 emotion-32"
                  datetime="2023-06-19"
                >
                  به روز شده در ۱۹ ژوئن ۲۰۲۳
                </time>
              </div>
            </div>
          </div>
        </li>
        <li
          class="emotion-23 emotion-5"
          dir="rtl"
          role="listitem"
        >
          <div
            class="emotion-25"
          >
            <div
              class="emotion-86"
              dir="rtl"
            >
              <span
                class="emotion-27"
              >
                ۹
              </span>
            </div>
            <div
              class="emotion-28"
              dir="rtl"
            >
              <a
                class="focusIndicatorDisplayTableCell emotion-29"
                href="https://www.bbc.com/persian/articles/c9wj7ejl17po"
              >
                چرا موبایل داغ می‌کند و چطور آن را خنک نگه داریم؟
              </a>
              <div
                class="emotion-30"
              >
                <time
                  class="emotion-31 emotion-32"
                  datetime="2023-06-18"
                >
                  به روز شده در ۱۸ ژوئن ۲۰۲۳
                </time>
              </div>
            </div>
          </div>
        </li>
        <li
          class="emotion-23 emotion-5"
          dir="rtl"
          role="listitem"
        >
          <div
            class="emotion-25"
          >
            <div
              class="emotion-116"
              dir="rtl"
            >
              <span
                class="emotion-27"
              >
                ۱۰
              </span>
            </div>
            <div
              class="emotion-28"
              dir="rtl"
            >
              <a
                class="focusIndicatorDisplayTableCell emotion-29"
                href="https://www.bbc.com/persian/articles/c6plvgyz614o"
              >
                هشتگ «داستان_ما_یکیست» در چهلمین سالگرد اعدام ۱۰ زن بهائی در شیراز
              </a>
              <div
                class="emotion-30"
              >
                <time
                  class="emotion-31 emotion-32"
                  datetime="2023-06-18"
                >
                  به روز شده در ۱۸ ژوئن ۲۰۲۳
                </time>
              </div>
            </div>
          </div>
        </li>
      </ol>
    </section>
  </div>
</div>
`;
